fix: remove CSS override in Pattern Lab causing navbar dropdown overlap issues in Pattern Lab's view all page

--- a/apps/pattern-lab/src/index.scss
+++ b/apps/pattern-lab/src/index.scss
@@ -19,13 +19,6 @@ bolt-demo {
   @include bolt-padding-right(small);
 }
 
-.pl-js-pattern-example {
-  transform: translate3d(
-    0,
-    0,
-    0
-  ); // force sticky and fixed elements to become static on main demo page.
-}
 
 .sg-main {
   @include bolt-padding(medium);
